Style fixes
- Fix on table display being cutoff
- Add margins on stop display

--- a/src/components/Stop.css
+++ b/src/components/Stop.css
@@ -1,4 +1,4 @@
-.stopDeecription {
+.stopDescription {
   display: flex;
   gap: 10px;
 }
